--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Spent</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="spent icon 16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="spent icon 32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="48x48"
+      href="spent icon 48x48.png"
+    />
   </head>
   <body>
     <div id="root"></div>
